Enhance layout and styling: add overflow-x hidden to prevent horizontal scrolling, adjust layout structure by removing unnecessary div, and improve animation effects in OptSolutionSection for better user experience.

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,6 +6,10 @@ html {
   behavior: "smooth",
 }
 
+html, body {
+  overflow-x: hidden;
+}
+
 
 
 @layer base {
@@ -192,6 +196,8 @@ html {
   font-style: normal;
   font-display: swap;
 }
+
+
 
 /* @layer base {
   body {
